--- a/Notebooks/Pre - Ordenado.ipynb
+++ b/Notebooks/Pre - Ordenado.ipynb
@@ -33,7 +33,9 @@
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "import scipy.spatial\n",
-    "from sklearn import preprocessing"
+    "from sklearn import preprocessing\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -56,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "print \"*****Data loading*****\"\n",
+    "print \"* * * * * Data loading * * * * *\"\n",
     "print \"loading station csv\"\n",
     "stationDF = pd.read_csv('../CSVs/station.csv')\n",
     "print \"loading trip train csv\"\n",
@@ -64,7 +66,7 @@
     "print \"loading trip test csv\"\n",
     "testingSet = pd.read_csv('../CSVs/trip_test.csv')\n",
     "\n",
-    "# GLORIOSO DF DEL TP1\n",
+    "# DF DEL TP1\n",
     "# (0 = Monday, 1 = Tuesday...)\n",
     "print \"loading dfSF_Bay csv\"\n",
     "dfSF_Bay = pd.read_csv('../CSVs/dfSF_Bay.csv')"
@@ -98,6 +100,16 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "stationDF.shape:  (70, 7)<br>\n",
+    "trainingSet.shape:  (549961, 11)<br>\n",
+    "testingSet.shape:  (119998, 10)<br>\n",
+    "dfSF_Bay.shape:  (733, 33)<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
@@ -116,7 +128,7 @@
    },
    "outputs": [],
    "source": [
-    "print \"*****Working on station distances*****\"\n",
+    "print \"* * * * * Working on station distances * * * * *\"\n",
     "# Create new temporary dataframe with distances\n",
     "distancesDF = pd.DataFrame(columns=[\"start_station_id\", \"end_station_id\", \"distance\"])\n",
     "\n",
@@ -160,7 +172,7 @@
    },
    "outputs": [],
    "source": [
-    "print \"*****Converting necessary data to dateTime*****\"\n",
+    "print \"* * * * * Converting necessary data to dateTime * * * * *\"\n",
     "# Convert necessary data to dateTime\n",
     "dfSF_Bay['date'] = pd.to_datetime(dfSF_Bay.date)\n",
     "\n",
@@ -273,8 +285,8 @@
    },
    "outputs": [],
    "source": [
-    "print \"*****Working on historic feature*****\"\n",
-    "print \"***Calculating historic feature***\"\n",
+    "print \"* * * * * Working on historic feature * * * * *\"\n",
+    "print \"* * * Calculating historic feature * * *\"\n",
     "import math\n",
     "listaStart = []\n",
     "listaEnd = []\n",
@@ -291,7 +303,9 @@
     "        historico = df.duration.mean()\n",
     "        if (not(math.isnan(historico))):\n",
     "            listaHistorico.append([i,j,historico])\n",
-    "        \n",
+    "        else:\n",
+    "            listaHistorico.append([i,j,0])\n",
+    "\n",
     "listaHistorico"
    ]
   },
@@ -333,7 +347,7 @@
    },
    "outputs": [],
    "source": [
-    "print \"**Merging historic feature**\"\n",
+    "print \"* * Merging historic feature * *\"\n",
     "# Merge this new data to training and testing dfs\n",
     "# Training\n",
     "trainingSet = pd.merge(trainingSet,dfData,on=['start_station_id', 'end_station_id'],how = 'inner') \n",
@@ -430,20 +444,9 @@
    },
    "outputs": [],
    "source": [
-    "testingSet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "trainingSet"
+    "print \"Saving pre - Discretizacion csvs...\"\n",
+    "trainingSet.to_csv('../CSVs/preDiscretizationTraining.csv', index=False)\n",
+    "testingSet.to_csv('../CSVs/preDiscretizationTesting.csv', index=False)"
    ]
   },
   {
@@ -453,17 +456,7 @@
     "editable": true
    },
    "source": [
-    "# Discretizacion y Normalizacion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "## Discretizacion"
+    "# Discretizacion"
    ]
   },
   {
@@ -504,8 +497,8 @@
    },
    "outputs": [],
    "source": [
-    "print \"*****Discretizacion y Normalizacion*****\"\n",
-    "print \"*****Discretizacion*****\""
+    "print \"* * * * * Discretizacion y Normalizacion * * * * *\"\n",
+    "print \"* * * * * Discretizacion * * * * *\""
    ]
   },
   {
@@ -703,36 +696,48 @@
    "source": [
     "# THIS CELL SHOULD NOT BE COPIED. THIS CELL IS ALLOWED TO BE PRESENT ONLY ONCE IN ALL THE NOTEBOOK\n",
     "print \"Saving temp csvs...\"\n",
-    "trainingSet.to_csv('../CSVs/tempTraining.csv')\n",
-    "testingSet.to_csv('../CSVs/tempTesting.csv')"
+    "trainingSet.to_csv('../CSVs/tempTraining.csv', index=False)\n",
+    "testingSet.to_csv('../CSVs/tempTesting.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Binarizacion"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "trainingSet.to_pickle('../CSVs/finalTraining')\n",
-    "testingSet.to_pickle('../CSVs/finalTesting')"
+    "def binarizar(columna,name,df):\n",
+    "    lista = []\n",
+    "    for i in list(columna):\n",
+    "        numero = int(i)\n",
+    "        lista.append(int(bin(numero)[2:]))\n",
+    "    df[name] = lista"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "trainingSet = pd.read_csv('../CSVs/tempTraining.csv')\n",
-    "testingSet = pd.read_csv('../CSVs/tempTesting.csv')"
+    "print \"Binarizando start_station_id...\"\n",
+    "binarizar(trainingSet.start_station_id,'start_station_id', trainingSet)\n",
+    "binarizar(testingSet.start_station_id,'start_station_id', testingSet)\n",
+    "\n",
+    "print \"Binarizando end_station_id...\"\n",
+    "binarizar(trainingSet.end_station_id,'end_station_id', trainingSet)\n",
+    "binarizar(testingSet.end_station_id,'end_station_id', testingSet)"
    ]
   },
   {
@@ -749,7 +754,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -826,7 +831,6 @@
    "source": [
     "# Delete: \n",
     "#     los dias como numero no aportan nada. E.g. 1 puede ser cualquier dia de la semana. \n",
-    "#     Nada en la vida se decide en base a numero de dia (salvo los ñoquis del 29 y martes/viernes 13). \n",
     "trainingSet.drop(['start_day_1','start_day_2', 'start_day_3','start_day_4', 'start_day_5','start_day_6','start_day_7', \n",
     "                  'start_day_8','start_day_9', 'start_day_10','start_day_11', 'start_day_12','start_day_13', \n",
     "                  'start_day_14','start_day_15','start_day_16', 'start_day_17','start_day_18','start_day_19',\n",
@@ -864,8 +868,6 @@
    "source": [
     "# Delete:\n",
     "#     La duracion del viaje no puede depender de algo del final del mismo. \n",
-    "#     Asi como el hambre que tengo no depende de lo que haya comido cuado ya comi, \n",
-    "#     la duracion del viaje no puede depender del momento final del mismo. \n",
     "#     De la misma manera, razonando analogamente, podemos concluir que contrario a esto, \n",
     "#     si influye el instante inicial del mismo\n",
     "#     Retiro lo dicho para la estacion final, quedando valido el razonamiento unicamente \n",
@@ -889,134 +891,6 @@
     "                  'end_hour10','end_hour11','end_hour12','end_hour13','end_hour14','end_hour15','end_hour16',\n",
     "                  'end_hour17','end_hour18','end_hour19','end_hour20','end_hour21','end_hour22','end_hour23' ],\n",
     "                 1,inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "list(trainingSet.columns.values)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Dejo como incognita 'viajes'. No se realmente que efecto puede tener. Algo me dice que es cualquier cosa, pero no lo sabria justificar."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "print sorted(trainingSet.business_day.unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "trainingSet.Normal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "trainingSet.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "testingSet.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "## Normalizacion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "print \"*****Normalizacion*****\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "print \"filtrando por duracion...\"\n",
-    "trainingSet = trainingSet.loc[trainingSet.duration < 1000000,:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "trainingSet"
    ]
   },
   {
