Pre ordenado updated

--- a/Notebooks/Pre - Ordenado.ipynb
+++ b/Notebooks/Pre - Ordenado.ipynb
@@ -33,7 +33,9 @@
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "import scipy.spatial\n",
-    "from sklearn import preprocessing"
+    "from sklearn import preprocessing\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -56,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "print \"*****Data loading*****\"\n",
+    "print \"* * * * * Data loading * * * * *\"\n",
     "print \"loading station csv\"\n",
     "stationDF = pd.read_csv('../CSVs/station.csv')\n",
     "print \"loading trip train csv\"\n",
@@ -64,7 +66,7 @@
     "print \"loading trip test csv\"\n",
     "testingSet = pd.read_csv('../CSVs/trip_test.csv')\n",
     "\n",
-    "# GLORIOSO DF DEL TP1\n",
+    "# DF DEL TP1\n",
     "# (0 = Monday, 1 = Tuesday...)\n",
     "print \"loading dfSF_Bay csv\"\n",
     "dfSF_Bay = pd.read_csv('../CSVs/dfSF_Bay.csv')"
@@ -98,6 +100,16 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "stationDF.shape:  (70, 7)<br>\n",
+    "trainingSet.shape:  (549961, 11)<br>\n",
+    "testingSet.shape:  (119998, 10)<br>\n",
+    "dfSF_Bay.shape:  (733, 33)<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
@@ -116,7 +128,7 @@
    },
    "outputs": [],
    "source": [
-    "print \"*****Working on station distances*****\"\n",
+    "print \"* * * * * Working on station distances * * * * *\"\n",
     "# Create new temporary dataframe with distances\n",
     "distancesDF = pd.DataFrame(columns=[\"start_station_id\", \"end_station_id\", \"distance\"])\n",
     "\n",
@@ -160,7 +172,7 @@
    },
    "outputs": [],
    "source": [
-    "print \"*****Converting necessary data to dateTime*****\"\n",
+    "print \"* * * * * Converting necessary data to dateTime * * * * *\"\n",
     "# Convert necessary data to dateTime\n",
     "dfSF_Bay['date'] = pd.to_datetime(dfSF_Bay.date)\n",
     "\n",
@@ -273,8 +285,8 @@
    },
    "outputs": [],
    "source": [
-    "print \"*****Working on historic feature*****\"\n",
-    "print \"***Calculating historic feature***\"\n",
+    "print \"* * * * * Working on historic feature * * * * *\"\n",
+    "print \"* * * Calculating historic feature * * *\"\n",
     "import math\n",
     "listaStart = []\n",
     "listaEnd = []\n",
@@ -291,7 +303,9 @@
     "        historico = df.duration.mean()\n",
     "        if (not(math.isnan(historico))):\n",
     "            listaHistorico.append([i,j,historico])\n",
-    "        \n",
+    "        else:\n",
+    "            listaHistorico.append([i,j,0])\n",
+    "\n",
     "listaHistorico"
    ]
   },
@@ -333,7 +347,7 @@
    },
    "outputs": [],
    "source": [
-    "print \"**Merging historic feature**\"\n",
+    "print \"* * Merging historic feature * *\"\n",
     "# Merge this new data to training and testing dfs\n",
     "# Training\n",
     "trainingSet = pd.merge(trainingSet,dfData,on=['start_station_id', 'end_station_id'],how = 'inner') \n",
@@ -430,34 +444,9 @@
    },
    "outputs": [],
    "source": [
-    "testingSet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "trainingSet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "trainingSet.to_csv('../CSVs/tempTraining.csv')\n",
-    "testingSet.to_csv('../CSVs/tempTesting.csv')"
+    "print \"Saving pre - Discretizacion csvs...\"\n",
+    "trainingSet.to_csv('../CSVs/preDiscretizationTraining.csv', index=False)\n",
+    "testingSet.to_csv('../CSVs/preDiscretizationTesting.csv', index=False)"
    ]
   },
   {
@@ -467,17 +456,7 @@
     "editable": true
    },
    "source": [
-    "# Discretizacion y Binarizacion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "## Discretizacion"
+    "# Discretizacion"
    ]
   },
   {
@@ -518,7 +497,8 @@
    },
    "outputs": [],
    "source": [
-    "print \"*****Discretizacion*****\""
+    "print \"* * * * * Discretizacion y Normalizacion * * * * *\"\n",
+    "print \"* * * * * Discretizacion * * * * *\""
    ]
   },
   {
@@ -644,121 +624,6 @@
    },
    "outputs": [],
    "source": [
-    "print \"trainingSet.shape: \", trainingSet.shape\n",
-    "print \"testingSet.shape: \", testingSet.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "## Binarizacion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "def binarizar(columna,name,df):\n",
-    "    lista = []\n",
-    "    for i in list(columna):\n",
-    "        numero = int(i)\n",
-    "        lista.append(int(bin(numero)[2:]))\n",
-    "    df[name] = lista"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "print \"Binarizando start_station_id...\"\n",
-    "binarizar(trainingSet.start_station_id,'start_station_id', trainingSet)\n",
-    "binarizar(testingSet.start_station_id,'start_station_id', testingSet)\n",
-    "\n",
-    "print \"Binarizando end_station_id...\"\n",
-    "binarizar(trainingSet.end_station_id,'end_station_id', trainingSet)\n",
-    "binarizar(testingSet.end_station_id,'end_station_id', testingSet)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# THIS CELL SHOULD NOT BE COPIED. THIS CELL IS ALLOWED TO BE PRESENT ONLY ONCE IN ALL THE NOTEBOOK\n",
-    "print \"Saving temp csvs...\"\n",
-    "trainingSet.to_csv('../CSVs/tempTraining.csv')\n",
-    "testingSet.to_csv('../CSVs/tempTesting.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "trainingSet.to_pickle('../CSVs/finalTraining')\n",
-    "testingSet.to_pickle('../CSVs/finalTesting')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "trainingSet = pd.read_csv('../CSVs/tempTraining.csv')\n",
-    "testingSet = pd.read_csv('../CSVs/tempTesting.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "# Data filtering"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
     "print \"Dropping trash columns...\"\n",
     "trainingSet = trainingSet.drop(labels = ['start_date', \n",
     "                                         'end_station_name',\n",
@@ -815,6 +680,86 @@
    },
    "outputs": [],
    "source": [
+    "print \"trainingSet.shape: \", trainingSet.shape\n",
+    "print \"testingSet.shape: \", testingSet.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# THIS CELL SHOULD NOT BE COPIED. THIS CELL IS ALLOWED TO BE PRESENT ONLY ONCE IN ALL THE NOTEBOOK\n",
+    "print \"Saving temp csvs...\"\n",
+    "trainingSet.to_csv('../CSVs/tempTraining.csv', index=False)\n",
+    "testingSet.to_csv('../CSVs/tempTesting.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Binarizacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def binarizar(columna,name,df):\n",
+    "    lista = []\n",
+    "    for i in list(columna):\n",
+    "        numero = int(i)\n",
+    "        lista.append(int(bin(numero)[2:]))\n",
+    "    df[name] = lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print \"Binarizando start_station_id...\"\n",
+    "binarizar(trainingSet.start_station_id,'start_station_id', trainingSet)\n",
+    "binarizar(testingSet.start_station_id,'start_station_id', testingSet)\n",
+    "\n",
+    "print \"Binarizando end_station_id...\"\n",
+    "binarizar(trainingSet.end_station_id,'end_station_id', trainingSet)\n",
+    "binarizar(testingSet.end_station_id,'end_station_id', testingSet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "# Data filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
     "trainingSet.drop(['Unnamed: 0'],1,inplace=True)\n",
     "testingSet.drop(['Unnamed: 0'],1,inplace=True)"
    ]
@@ -831,10 +776,10 @@
    "source": [
     "# Delete repeated data\n",
     "trainingSet.drop(['date','year_y','month_y','weekday_y'],1,inplace=True)\n",
-    "trainingSet.drop(['year_x','month_x','weekday_x'],1,inplace=True)\n",
+    "trainingSet = trainingSet.rename(columns={'year_x':'year','month_x':'month','weekday_x': 'weekday'})\n",
     "\n",
     "testingSet.drop(['date','year_y','month_y','weekday_y'],1,inplace=True)\n",
-    "testingSet.drop(['year_x','month_x','weekday_x'],1,inplace=True)"
+    "testingSet = testingSet.rename(columns={'year_x':'year','month_x':'month','weekday_x': 'weekday'})"
    ]
   },
   {
@@ -851,12 +796,9 @@
     "#     id: el id que identifica univocamente cada uno de los viajes \n",
     "#         no proporciona informacion con la que el algoritmo pueda aprender\n",
     "#     start_station_id y end_station_id: las estaciones ya estan discretizadas por nombre\n",
-    "#trainingSet.drop(['start_station_id','end_station_id'],1,inplace=True)\n",
+    "trainingSet.drop(['id', 'start_station_id','end_station_id'],1,inplace=True)\n",
     "\n",
-    "#testingSet.drop(['start_station_id','end_station_id'],1,inplace=True)\n",
-    "\n",
-    "#ACTUALIZACION DE LA BINARIZACION\n",
-    "#NO SACARIA EL ID POR CUESTIONES DE MERGEO POSTERIORES."
+    "testingSet.drop(['id', 'start_station_id','end_station_id'],1,inplace=True)"
    ]
   },
   {
@@ -889,7 +831,6 @@
    "source": [
     "# Delete: \n",
     "#     los dias como numero no aportan nada. E.g. 1 puede ser cualquier dia de la semana. \n",
-    "#     Nada en la vida se decide en base a numero de dia (salvo los ñoquis del 29 y martes/viernes 13). \n",
     "trainingSet.drop(['start_day_1','start_day_2', 'start_day_3','start_day_4', 'start_day_5','start_day_6','start_day_7', \n",
     "                  'start_day_8','start_day_9', 'start_day_10','start_day_11', 'start_day_12','start_day_13', \n",
     "                  'start_day_14','start_day_15','start_day_16', 'start_day_17','start_day_18','start_day_19',\n",
@@ -927,8 +868,6 @@
    "source": [
     "# Delete:\n",
     "#     La duracion del viaje no puede depender de algo del final del mismo. \n",
-    "#     Asi como el hambre que tengo no depende de lo que haya comido cuado ya comi, \n",
-    "#     la duracion del viaje no puede depender del momento final del mismo. \n",
     "#     De la misma manera, razonando analogamente, podemos concluir que contrario a esto, \n",
     "#     si influye el instante inicial del mismo\n",
     "#     Retiro lo dicho para la estacion final, quedando valido el razonamiento unicamente \n",
@@ -960,85 +899,15 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "list(trainingSet.columns.values)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Dejo como incognita 'viajes'. No se realmente que efecto puede tener. Algo me dice que es cualquier cosa, pero no lo sabria justificar."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Tincho: yo si sacaria viajes, no me aporto nada de nada en las predicciones y ademas no le veo mucho sentido"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "print sorted(trainingSet.business_day.unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
-    "trainingSet.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "testingSet.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
+    "# !!!!!!!! U L T I M A   C E L D A  !!!!!!!!\n",
+    "print \"Saving to new csvs...\"\n",
+    "print \"Saving trainingSet to ../CSVs/finalTraining.csv...\"\n",
     "trainingSet.to_csv('../CSVs/finalTraining.csv')\n",
+    "print \"Saving testingSet to ../CSVs/finalTesting.csv...\"\n",
     "testingSet.to_csv('../CSVs/finalTesting.csv')"
    ]
   }
