--- a/Notebooks/Pre - Ordenado.ipynb
+++ b/Notebooks/Pre - Ordenado.ipynb
@@ -100,7 +100,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "stationDF.shape:  (70, 7)<br>\n",
     "trainingSet.shape:  (549961, 11)<br>\n",
@@ -615,6 +618,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "# Binarizacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "def binarizar(columna,name,df):\n",
+    "    lista = []\n",
+    "    for i in list(columna):\n",
+    "        numero = int(i)\n",
+    "        lista.append(int(bin(numero)[2:]))\n",
+    "    df[name] = lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "print \"Binarizando start_station_id...\"\n",
+    "binarizar(trainingSet.start_station_id,'start_station_id', trainingSet)\n",
+    "binarizar(testingSet.start_station_id,'start_station_id', testingSet)\n",
+    "\n",
+    "print \"Binarizando end_station_id...\"\n",
+    "binarizar(trainingSet.end_station_id,'end_station_id', trainingSet)\n",
+    "binarizar(testingSet.end_station_id,'end_station_id', testingSet)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -702,46 +752,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Binarizacion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def binarizar(columna,name,df):\n",
-    "    lista = []\n",
-    "    for i in list(columna):\n",
-    "        numero = int(i)\n",
-    "        lista.append(int(bin(numero)[2:]))\n",
-    "    df[name] = lista"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "print \"Binarizando start_station_id...\"\n",
-    "binarizar(trainingSet.start_station_id,'start_station_id', trainingSet)\n",
-    "binarizar(testingSet.start_station_id,'start_station_id', testingSet)\n",
-    "\n",
-    "print \"Binarizando end_station_id...\"\n",
-    "binarizar(trainingSet.end_station_id,'end_station_id', trainingSet)\n",
-    "binarizar(testingSet.end_station_id,'end_station_id', testingSet)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
@@ -776,29 +786,10 @@
    "source": [
     "# Delete repeated data\n",
     "trainingSet.drop(['date','year_y','month_y','weekday_y'],1,inplace=True)\n",
-    "trainingSet = trainingSet.rename(columns={'year_x':'year','month_x':'month','weekday_x': 'weekday'})\n",
+    "trainingSet.drop(['year_x','month_x','weekday_x'],1,inplace=True)\n",
     "\n",
     "testingSet.drop(['date','year_y','month_y','weekday_y'],1,inplace=True)\n",
-    "testingSet = testingSet.rename(columns={'year_x':'year','month_x':'month','weekday_x': 'weekday'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# Delete:\n",
-    "#     id: el id que identifica univocamente cada uno de los viajes \n",
-    "#         no proporciona informacion con la que el algoritmo pueda aprender\n",
-    "#     start_station_id y end_station_id: las estaciones ya estan discretizadas por nombre\n",
-    "trainingSet.drop(['id', 'start_station_id','end_station_id'],1,inplace=True)\n",
-    "\n",
-    "testingSet.drop(['id', 'start_station_id','end_station_id'],1,inplace=True)"
+    "testingSet.drop(['year_x','month_x','weekday_x'],1,inplace=True)"
    ]
   },
   {
