add all remaining files in pc

--- a/Pre - Ordenado.ipynb
+++ b/Pre - Ordenado.ipynb
@@ -2269,7 +2269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -2361,64 +2361,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "# Binarizacion"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "def binarizar(columna,name,df):\n",
-    "    lista = []\n",
-    "    for i in list(columna):\n",
-    "        numero = int(i)\n",
-    "        lista.append(int(bin(numero)[2:]))\n",
-    "    df[name] = lista"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Binarizando start_station_id...\n",
-      "Binarizando end_station_id...\n"
-     ]
-    }
-   ],
-   "source": [
-    "print \"Binarizando start_station_id...\"\n",
-    "binarizar(trainingSet.start_station_id,'start_station_id', trainingSet)\n",
-    "binarizar(testingSet.start_station_id,'start_station_id', testingSet)\n",
-    "\n",
-    "print \"Binarizando end_station_id...\"\n",
-    "binarizar(trainingSet.end_station_id,'end_station_id', trainingSet)\n",
-    "binarizar(testingSet.end_station_id,'end_station_id', testingSet)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -2482,22 +2426,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "trainingSet.shape:  (549961, 359)\n",
-      "testingSet.shape:  (119998, 358)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print \"trainingSet.shape: \", trainingSet.shape\n",
     "print \"testingSet.shape: \", testingSet.shape"
@@ -2505,21 +2440,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving temp csvs...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# THIS CELL SHOULD NOT BE COPIED. THIS CELL IS ALLOWED TO BE PRESENT ONLY ONCE IN ALL THE NOTEBOOK\n",
     "print \"Saving temp csvs...\"\n",
@@ -2534,12 +2461,73 @@
     "editable": true
    },
    "source": [
+    "# Binarizacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "def binarizar(columna,name,df):\n",
+    "    lista = []\n",
+    "    for i in list(columna):\n",
+    "        numero = int(i)\n",
+    "        lista.append(int(bin(numero)[2:]))\n",
+    "    df[name] = lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "print \"Binarizando start_station_id...\"\n",
+    "binarizar(trainingSet.start_station_id,'start_station_id', trainingSet)\n",
+    "binarizar(testingSet.start_station_id,'start_station_id', testingSet)\n",
+    "\n",
+    "print \"Binarizando end_station_id...\"\n",
+    "binarizar(trainingSet.end_station_id,'end_station_id', trainingSet)\n",
+    "binarizar(testingSet.end_station_id,'end_station_id', testingSet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
     "# Data filtering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet.drop(['Unnamed: 0'],1,inplace=True)\n",
+    "testingSet.drop(['Unnamed: 0'],1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -2549,15 +2537,34 @@
    "source": [
     "# Delete repeated data\n",
     "trainingSet.drop(['date','year_y','month_y','weekday_y'],1,inplace=True)\n",
-    "trainingSet.drop(['year_x','month_x','weekday_x'],1,inplace=True)\n",
+    "trainingSet = trainingSet.rename(columns={'year_x':'year','month_x':'month','weekday_x': 'weekday'})\n",
     "\n",
     "testingSet.drop(['date','year_y','month_y','weekday_y'],1,inplace=True)\n",
-    "testingSet.drop(['year_x','month_x','weekday_x'],1,inplace=True)"
+    "testingSet = testingSet.rename(columns={'year_x':'year','month_x':'month','weekday_x': 'weekday'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# Delete:\n",
+    "#     id: el id que identifica univocamente cada uno de los viajes \n",
+    "#         no proporciona informacion con la que el algoritmo pueda aprender\n",
+    "#     start_station_id y end_station_id: las estaciones ya estan discretizadas por nombre\n",
+    "trainingSet.drop(['id', 'start_station_id','end_station_id'],1,inplace=True)\n",
+    "\n",
+    "testingSet.drop(['id', 'start_station_id','end_station_id'],1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -2575,7 +2582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -2612,7 +2619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -2649,23 +2656,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving to new csvs...\n",
-      "Saving trainingSet to ../CSVs/finalTraining.csv...\n",
-      "Saving testingSet to ../CSVs/finalTesting.csv...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !!!!!!!! U L T I M A   C E L D A  !!!!!!!!\n",
     "print \"Saving to new csvs...\"\n",
